--- a/edaTp3/edaTp3/edaTp3.vcxproj.filters
+++ b/edaTp3/edaTp3/edaTp3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Dibujator.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="typedef.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Robot.cpp">
